Adicionado Swagger para atualizar filme
