# src/server.ts
@@ -61,23 +61,17 @@ app.put('/movies/:id', async (req, res) => {
         if (!movie) {
             return res.status(404).send({ message: 'Filme não encontrado' })
         }
-        const data = { ...req.body }
-        data.release_date = data.release_date
-            ? new Date(data.release_date)
-            : undefined
+        const data = { ...req.body };
+        data.release_date = data.release_date ? new Date(data.release_date) : undefined
 
         await prisma.movie.update({
             where: {
                 id,
             },
-            data: {
-                release_date: new Date(req.body.release_date),
-            },
-        })
+            data: data,
+        });
     } catch (error) {
-        return res
-            .status(500)
-            .send({ message: 'Falha ao atualizar o registro' })
+        return res.status(500).send({ message: 'Falha ao atualizar o registro' })
     }
     res.status(200).send()
 })
